<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Fragments.NewUserFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:scrollbars="vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="180sp"
                android:layout_height="130sp"
                android:layout_gravity="center"
                android:layout_marginBottom="13dp"
                android:src="@mipmap/logo_map_name_foreground" />

        <TextView
                android:id="@+id/wrong_login_message_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@color/dark_red"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="6dp"
                android:paddingTop="0dp"
                android:paddingEnd="6dp"
                android:paddingBottom="0dp"
                android:text="@string/wrong_username_or_password"
                android:textSize="13sp"
                android:visibility="gone" />

        <EditText
                android:id="@+id/new_user_name_editText"
                style="@style/BGTransparentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/login_edit_text"
                android:drawableLeft="@drawable/user_circle"
                android:drawableTint="@color/black"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/new_user_lastName_editText"
                style="@style/BGTransparentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/login_edit_text"
                android:drawableLeft="@drawable/user_circle"
                android:drawableTint="@color/black"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/new_user_email_editText"
                style="@style/BGTransparentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/login_edit_text"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/new_password_editText"
                style="@style/BGTransparentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/login_edit_text"
                android:drawableLeft="@drawable/lock"
                android:drawableTint="@color/black"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/confirm_new_password_editText"
                style="@style/BGTransparentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/login_edit_text"
                android:drawableLeft="@drawable/lock"
                android:drawableTint="@color/black"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/password_confirm"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/new_user_enter_button"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

        <RadioGroup
                android:id="@+id/new_user_radio_group"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/login_border_button"
                android:orientation="horizontal">


            <RadioButton
                    android:id="@+id/new_user_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:fontFamily="@font/quicksandsemibold"
                    android:gravity="center_vertical"
                    android:text="@string/new_user_male"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

            <RadioButton
                    android:id="@+id/new_user_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:fontFamily="@font/quicksandsemibold"
                    android:text="@string/new_user_female"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

            <RadioButton
                    android:id="@+id/new_user_not_inform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:fontFamily="@font/quicksandsemibold"
                    android:text="@string/new_user_not_inform"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />


        </RadioGroup>

        <Button
                android:id="@+id/new_user_enter_button"
                style="@style/LoginNextButton"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/register_user"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@color/black" />

        <Button
                android:id="@+id/new_user_back"
                style="@style/NewUserButton"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="@string/back"
                android:textColor="@color/colorAccent" />
    </LinearLayout>

</ScrollView>