<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             tools:context=".Fragments.LoginFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center_vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="180sp"
                android:layout_height="130sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logo_map_name_foreground" />
        <TextView
                android:id="@+id/wrong_login_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@color/dark_red"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="0dp"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:paddingTop="0dp"
                android:text="@string/wrong_username_or_password"
                android:textSize="13sp"
                android:visibility="invisible"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_editText_relative"
                android:visibility="visible">

            <EditText
                    android:id="@+id/user_editText"
                    style="@style/BGTransparentLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/login_edit_text"
                    android:fontFamily="@font/quicksandsemibold"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="45sp"
                    android:singleLine="false"
                    android:textColor="@color/dark_gray"
                    android:textSize="22sp" />

            <ImageView
                    android:id="@+id/username_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40sp"
                    android:padding="3dp"
                    android:tint="@color/black"
                    app:srcCompat="@drawable/email" />

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/password_editText_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            <EditText
                    android:id="@+id/password_editText"
                    style="@style/BGTransparentLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/login_edit_text"
                    android:fontFamily="@font/quicksandsemibold"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="45sp"
                    android:singleLine="false"
                    android:textColor="@color/dark_gray"
                    android:textSize="22sp" />

            <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40sp"
                    android:padding="3dp"
                    android:tint="@color/black"
                    app:srcCompat="@drawable/lock" />


        </RelativeLayout>

        <Button
                android:id="@+id/enter_button"
                style="@style/LoginNextButton"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/black" />

        <Button
                android:id="@+id/new_user"
                style="@style/NewUserButton"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/new_user"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

        <Button
                android:id="@+id/back_login_button"
                style="@style/NewUserButton"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:visibility="gone" />

        <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50sp"
                android:text="@string/forget_password"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:visibility="invisible" />
    </LinearLayout>

</FrameLayout>